# IRRA

./: .gitignore  pyproject.toml  train.py
datasets/: cuhkpedes.py
notebooks/: demo.ipynb
src/irra/datasets/: bases.py  build.py  cuhkpedes.py
src/irra/model/: build.py  clip_model.py
src/irra/processor/: processor.py
src/irra/utils/: simple_tokenizer.py
